ユーザー登録フォーム作成

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
             引数で与えられたユーザーのGravatar画像を返すヘルパーメソッド
             自作のヘルパーメソッドです
             -->
-                <%= gravatar_for @user %>
+                <%= gravatar_for(@user) %>
                 <%= @user.name %>
             </h1>
         </section>
