--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
         その内容を評価し、結果をビューに挿入する。ファイルの先頭に_付けるのが命名規約。 -->
     <%= render 'layouts/header' %>
     <div class="container">
+        <!-- message_type(ここにはflashのキーが入る)を使うことで、
+            適用するCSSクラスをメッセージの種類によって変更できるようにしている
+            例えば:successキーのメッセージが表示される場合、適用されるCSSクラスは
+            alert-successとなる。
+            Bootstrap CSSは、このようなflashのクラス用に4つのスタイルを持っている(success、info、warning、danger)。 -->
+        <% flash.each do |message_type, message| %>
+            <div class="alert alert-<%= message_type %>"><%= message %></div>
+        <% end %>
         <%= yield %>
         <%= render("layouts/footer") %>
         <!-- デバッグ用の情報表示
